--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:943234109518:ios:67c586f2918a46caacb31f",
-  "FIREBASE_PROJECT_ID": "sparepark-a3ec5",
-  "GCM_SENDER_ID": "943234109518"
+  "GOOGLE_APP_ID": "1:146231892644:ios:93ab880e8e4ea89227a431",
+  "FIREBASE_PROJECT_ID": "sparepark-d7804",
+  "GCM_SENDER_ID": "146231892644"
 }
