--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   geolocator: ^9.0.2
   google_maps_webservice: ^0.0.20-nullsafety.5
   flutter_google_places: ^0.3.0
+  cloud_firestore: ^4.5.2
+  firebase_database: ^10.1.1
 
 dev_dependencies:
   flutter_test:
