--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_google_places: ^0.3.0
   cloud_firestore: ^4.5.2
   firebase_database: ^10.1.1
+  geocoding: ^2.1.0
+  url_launcher: ^6.1.10
+  android_intent: ^2.0.2
+  polyline: ^1.0.2
 
 dev_dependencies:
   flutter_test:
