--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.1.10
   android_intent: ^2.0.2
   polyline: ^1.0.2
+  label_marker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
