--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   android_intent: ^2.0.2
   polyline: ^1.0.2
   label_marker: ^1.0.1
+  flutter_datetime_picker: ^1.5.1
+  f_datetimerangepicker: ^0.2.0
+  intl: ^0.18.1
+  flutter_cupertino_date_picker: ^1.0.26+2
 
 dev_dependencies:
   flutter_test:
