--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   f_datetimerangepicker: ^0.2.0
   intl: ^0.18.1
   flutter_cupertino_date_picker: ^1.0.26+2
+  date_format: ^2.0.7
 
 dev_dependencies:
   flutter_test:
