--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   http: ^0.13.6
+  firebase_auth: ^4.2.2
+  google_sign_in: ^6.1.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
