--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   firebase_auth: ^4.2.2
   google_sign_in: ^6.1.0
   cached_network_image: ^3.2.3
+  image_picker: ^0.8.7+4
+  firebase_storage: ^11.1.2
 
 dev_dependencies:
   flutter_test:
