--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   image_picker: ^0.8.7+4
   firebase_storage: ^11.1.2
   flutter_rating_bar: ^4.0.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
