--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   firebase_storage: ^11.1.2
   flutter_rating_bar: ^4.0.1
   get: ^4.6.5
+  flutter_auth_buttons: ^0.10.0
+  sign_in_button: ^3.2.0
+  auth_buttons: ^3.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
