--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,11 @@ dependencies:
   sign_in_button: ^3.2.0
   auth_buttons: ^3.0.0
   provider: ^6.0.5
+  shared_preferences: ^2.1.1
+  rounded_loading_button: ^2.1.0
+  connectivity_plus: ^4.0.0
+  page_transition: ^2.0.9
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
