--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,10 @@ dependencies:
   lottie: ^2.3.2
   provider: ^6.0.0
   image: ^4.0.17
+  location: ^4.4.0
+  hawk_fab_menu: ^1.2.0
+  custom_map_markers: ^0.0.2+1
+  flutter_image_compress: ^2.0.3
 
 dev_dependencies:
   flutter_test:
