--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   hawk_fab_menu: ^1.2.0
   custom_map_markers: ^0.0.2+1
   flutter_image_compress: ^2.0.3
+  device_preview: ^0.1.4-beta
 
 dev_dependencies:
   flutter_test:
